implemented setUpFeed on page load

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
         <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
+        <!-- Posts Row -->
+        <div class="row" id="posts">
             <div class="col-md-4 market-item market-item-small">
                 <a href="#">
                     <img class="img-responsive" src="img/pants1.jpg" alt="Pants Example">
@@ -57,40 +57,10 @@
                 </h3>
                 <p id="size">Size: </p>
                 <p id="price">Price: </p>
-                <button class="btn btn-primary" value="Make Offer" href="/api/offer">Make Offer</button class="btn btn-primary">
-                <button class="btn btn-primary" value="Save" href="/bookmark">Save</button class="btn btn-primary">
+                <button class="btn btn-primary" value="Make Offer" href="/api/offer">Make Offer</button>
+                <button class="btn btn-primary" value="Save" href="/bookmark">Save</button>
             </div>
-
-
-
-            <div class="col-md-4 market-item market-item-small">
-                <a href="#">
-                    <img class="img-responsive" src="img/books_collection1.jpg" alt="Book Collection Example">
-                </a>
-                <h3>
-                    <a href="#">Clearance Sale of Books</a>
-                </h3>
-                <p id="price">Price: </p>
-                <p id="description">Miscellaneous Info Max 200 char </p>
-
-                <button class="btn btn-primary">Message Seller</button class="btn btn-primary">
-                <button class="btn btn-primary">Save</button class="btn btn-primary">
-            </div>
-
-
-            <div class="col-md-4 market-item market-item-small">
-                <a href="#">
-                    <img class="img-responsive" src="img/food1.jpg" alt="Food Example">
-                </a>
-                <h3>
-                    <a href="#">Hokkien Style Kuay Teow</a>
-                </h3>
-                <p id="price">Quick Deal only</p>
-                <p id="description"> I made some delicious kuay teow if anyone wants to buy some they are $5 a pop but you can technically pay however much you like.</p>
-
-                <button class="btn btn-primary">Make Offer</button class="btn btn-primary">
-                <button class="btn btn-primary">Save</button class="btn btn-primary">
-            </div>
+        
         </div>
         <!-- /.row -->                  
     </div> <!-- container -->
