--- a/index.html
+++ b/index.html
@@ -103,19 +103,15 @@
   </div>
 </div>
 
-
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>   Copyright &copy; Shuffle 2016</p>
-            </div>
+<!-- Footer -->
+<footer>
+    <div class="row">
+        <div class="col-lg-12">
+            <p>   Copyright &copy; Shuffle 2016</p>
         </div>
-        <!-- /.row -->
-    </footer>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    </div>
+    <!-- /.row -->
+</footer>
 
     <!-- jQuery CDN -->
     <script   src="https://code.jquery.com/jquery-2.2.3.js"   integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>
@@ -125,6 +121,9 @@
 
     <!-- Bootstrap CDN Javascript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <!-- Amazon AWS JS SDK -->
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.3.3.min.js"></script>
 
     <!-- Custom Javascript -->
     <script src="js/index.js"></script>
