--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-
+    <script src="js/sha256.js"></script>
 </head>
 
 <body>
