--- a/public/index.html
+++ b/public/index.html
@@ -32,15 +32,24 @@
 
 <body>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.6&appId=984999378273841";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
    <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header page-header">
           <a class="navbar-brand" href="#">
             Shuffle?
           </a>
+          <span class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="true"></span>
+          <button style="position: absolute; right: 2em;" type="button" class="btn btn-success navbar-btn" id="makePostButton" data-target="#makePostModal" data-toggle="modal" >Add Something To Sell</button>
         </div>
-<button type="button" class="btn btn-success navbar-btn" id="makePostButton" data-target="#makePostModal" data-toggle="modal" >Add Something To Sell</button>
-
       </div>
     </nav> <!-- end nav -->
 
@@ -55,18 +64,6 @@
     
 
 <hr>
-
-<!-- CLICK TO VIEW MORE INFO MODAL -->
-  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="moreInfoModal">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-             <h4 class="modal-title" id="moreInfoModalLabel"> </h4>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <!-- ADD PRODUCT TO SELL MODAL -->
     <div class="modal fade" id="makePostModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -111,11 +108,13 @@
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <!-- Custom Javascript -->
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
     <!-- Core Bootstrap Minimized -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Packery Grid CDN -->
     <script src="https://npmcdn.com/packery@2.0/dist/packery.pkgd.min.js"></script>
+    
+    <script src="js/posts.js"></script>
 
 </body>
 
