--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<title>Shuffle</title>
     <link rel="stylesheet" href="/css/normalize.css">
 		<link rel="stylesheet" href="/css/styles.css">
+		<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<script src="https://use.fontawesome.com/ae09164452.js"></script>
